# ComfyUI-Jakkanna

./: .comfyignore  .gitignore  CHANGELOG.md  FORK_NOTICE.md  README.md  THIRD_PARTY_NOTICES.md  __init__.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: deprecate_registry_version.yml  publish_action.yml  test.yml  update_registry_version.yml
CharacterData/: __init__.py  mh_parser.py  mh_skeleton.py
PoseLibrary/local_user_poses/Uncategorized/: 10.json  11.json  12.json  13.json  3.json  5.json  6.json  8.json  9.json  FckYou.json  Hi.json  Meditation.json  Seeking.json  V Selfie.json  Youga.json  exercises1.json  exercises2.json  stay on hand.json
api/: pose_library.py
config/: default_pose_repositories.json  unicanvas_presets.json
docs/: JAKKANNA_POSE_STUDIO_USAGE.md  MODEL_MANAGER_GUIDE.md  MODEL_SELECTOR_USAGE.md  UNICANVAS_MODEL_MODULES.md
jakkanna_sam3d/: pose_import.py  preset_pack.py  progress.py
jakkanna_sam3d/processing/: __init__.py  load_model.py
nodes/: anima_lllite_internal.py  camera_control.py  model_manager.py  openpose_export.py  pose_studio.py  qwen_detailer.py  scail2_flow_unipc.py  scail2_production.py  unicanvas.py  vnccs_model_manager.py  vnccs_nodes.py  vnccs_openpose_export.py  vnccs_qwen_detailer.py
tests/: test_export_posed_mesh.py  test_identity.py  test_pose_studio.py  verify_pose_studio_fixes.py
tools/: export_posed_mesh.py
video_formats/: ffv1-rgb-mkv.json
vnccs_sam3d/: README.md  __init__.py  pose_import.py  progress.py
vnccs_sam3d/processing/: birefnet_mask.py  process.py
vnccs_sam3d/sam_3d_body/models/backbones/dinov3_repo/dinov3/logging/: __init__.py
web/: jakkanna_camera_control.js  jakkanna_hand_presets.js  jakkanna_legacy_compatibility.js  jakkanna_mixamo_import.js  jakkanna_model_manager.js  jakkanna_openpose_import.js  jakkanna_pose_morph_worker.js  jakkanna_pose_studio.js  jakkanna_pose_studio_core.js  jakkanna_unicanvas.js  vnccs_legacy_compatibility.js  vnccs_mixamo_import.js  vnccs_model_manager.js  vnccs_pose_studio.js  vnccs_pose_studio_core.js  vnccs_unicanvas.js
workflows/: Jakkanna Krea 2 SCAIL 2 Animate Fast.json  Jakkanna Krea 2 SCAIL 2 Animate Production.json  Jakkanna Model Loader Showcase.json  Jakkanna Pose Studio Klein9b.json  Jakkanna Pose Studio Krea 2 Community.json  Jakkanna Pose Studio QWEN.json  Jakkanna QWEN Detailer.json  Jakkanna Visual Camera Control.json  Krea 2 Community Raw Mystic Turbo.json  VNCCS_Utils Pose Studio Klein9b.json  VNCCS_Utils Pose Studio QWEN.json
