[project]
name = "vnccs-utils-maintained"
description = "Maintained VNCCS Utils fork with corrected Pose Studio, OpenPose, capture, and morph execution."
version = "0.6.0"
license = {file = "LICENSE"} 

dependencies = [
    "opencv-python",
    "huggingface_hub",
    "aiohttp",
    "kornia",
    "requests",
    "torch",
    "torchvision",
    "numpy",
    "Pillow",
    "transformers",
    "safetensors",
    "pytorch-lightning",
    "omegaconf",
    "yacs",
    "timm",
    "einops",
    "roma",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["comfyui", "image-processing", "3d", "pose-estimation"]

[project.urls]
Repository = "https://github.com/teenu/ComfyUI-VNCCS-Utils-Maintained"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/teenu/ComfyUI-VNCCS-Utils-Maintained"
"Bug Tracker" = "https://github.com/teenu/ComfyUI-VNCCS-Utils-Maintained/issues"

[tool.comfy]
PublisherId = "teenu"
DisplayName = "VNCCS Utils Maintained"
NodeIds = [
    "VNCCS_PositionControl",
    "VNCCS_VisualPositionControl",
    "VNCCS_QWEN_Detailer",
    "VNCCS_BBox_Extractor",
    "VNCCS_ModelManager",
    "VNCCS_ModelSelector",
    "VNCCS_PoseStudio",
    "VNCCS_PoseStudioOpenPose",
    "VNCCSReplaceOpenPoseHands",
    "VNCCS_UniCanvas",
]
