[project]
name = "jakkanna"
description = "Visual control and creative tools for ComfyUI: 3D posing, OpenPose, canvas editing, detailing, and model workflows."
version = "1.0.1"
license = {file = "LICENSE"} 

dependencies = [
    "opencv-python",
    "huggingface_hub",
    "aiohttp",
    "kornia",
    "requests",
    "torch",
    "torchvision",
    "numpy",
    "Pillow",
    "transformers",
    "safetensors",
    "pytorch-lightning",
    "omegaconf",
    "yacs",
    "timm",
    "einops",
    "roma",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["comfyui", "image-processing", "3d", "pose-estimation"]

[project.urls]
Repository = "https://github.com/teenu/ComfyUI-Jakkanna"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/teenu/ComfyUI-Jakkanna"
"Bug Tracker" = "https://github.com/teenu/ComfyUI-Jakkanna/issues"

[tool.comfy]
PublisherId = "teenu"
DisplayName = "Jakkanna"
NodeIds = [
    "VNCCS_PositionControl",
    "VNCCS_VisualPositionControl",
    "VNCCS_QWEN_Detailer",
    "VNCCS_BBox_Extractor",
    "VNCCS_ModelManager",
    "VNCCS_ModelSelector",
    "VNCCS_PoseStudio",
    "VNCCS_PoseStudioOpenPose",
    "VNCCS_ReplaceOpenPoseHands",
    "VNCCS_UniCanvas",
]
