[project]
name = "jakkanna"
description = "Visual control and creative tools for ComfyUI: 3D posing, OpenPose, canvas editing, detailing, and model workflows."
version = "1.2.0"
license = {file = "THIRD_PARTY_NOTICES.md"}

dependencies = [
    "opencv-python",
    "av>=16.0.0",
    "diffusers>=0.31.0,<0.40",
    "huggingface_hub",
    "aiohttp",
    "kornia",
    "requests",
    "torch",
    "torchvision",
    "numpy",
    "Pillow",
    "transformers",
    "safetensors",
    "pytorch-lightning",
    "omegaconf",
    "yacs",
    "timm",
    "einops",
    "roma",
    "trimesh",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["comfyui", "image-processing", "3d", "pose-estimation"]

[project.urls]
Repository = "https://github.com/teenu/ComfyUI-Jakkanna"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/teenu/ComfyUI-Jakkanna"
"Bug Tracker" = "https://github.com/teenu/ComfyUI-Jakkanna/issues"

[tool.comfy]
PublisherId = "teenu"
DisplayName = "Jakkanna"
NodeIds = [
    "VNCCS_PositionControl",
    "VNCCS_VisualPositionControl",
    "VNCCS_QWEN_Detailer",
    "VNCCS_BBox_Extractor",
    "VNCCS_ModelManager",
    "VNCCS_ModelSelector",
    "VNCCS_PoseStudio",
    "JakkannaPromptFromList",
    "JakkannaSCAIL2FlowUniPC",
    "JakkannaSCAIL2ProductionInputValidate",
    "JakkannaSCAIL2ProductionManifest",
    "JakkannaSCAIL2ReferencePNG16Save",
    "JakkannaSCAIL2SingleSubjectMask",
    "JakkannaSCAIL2TrackValidate",
    "JakkannaSCAIL2UpstreamNoise",
    "VNCCS_PoseStudioOpenPose",
    "VNCCSReplaceOpenPoseHands",
    "VNCCS_ReplaceOpenPoseHands",
    "VNCCS_UniCanvas",
]
